force-app/main/default/objects/copadovsm__Value_Stream_Map_Event__c/copadovsm__Value_Stream_Map_Event__c.object-meta.xml
<CustomObject>
    <label>Value Stream Map Event</label>
    <nameField>
        <displayFormat>EV-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Value Stream Map Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>