force-app/main/default/objects/copadovsm__Value_Stream_Map_Event__c/fields/copadovsm__Elapse_Time__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Elapse_Time__c</fullName>
    <formula>IF(ISNULL(copadovsm__End_Date__c),(NOW()-copadovsm__Start_Date__c)*24,(copadovsm__End_Date__c-copadovsm__Start_Date__c)*24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elapse Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>