force-app/main/default/objects/copadovsm__Value_Stream_Map_Event__c/fields/copadovsm__Event_Code__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Event_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Event Code</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>