force-app/main/default/objects/copadovsm__Value_Stream_Map_Event__c/fields/copadovsm__External_Id__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>