force-app/main/default/objects/copadovsm__Value_Stream_Map_Event__c/fields/copadovsm__Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Lead_Time__c</fullName>
    <formula>(copadovsm__End_Date__c-copadovsm__Start_Date__c)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Time</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>