force-app/main/default/objects/copadovsm__Value_Stream_Map_Event__c/fields/copadovsm__Operator_Id__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Operator_Id__c</fullName>
    <label>Operator Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>