force-app/main/default/objects/copadovsm__Value_Stream_Map_Event__c/fields/copadovsm__Process_Block__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Process_Block__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Block</label>
    <referenceTo>copadovsm__Process_Block__c</referenceTo>
    <relationshipName>Value_Stream_Map_Events</relationshipName>
    <type>Lookup</type>
</CustomField>