force-app/main/default/objects/copadovsm__Value_Stream_Map_Event__c/fields/copadovsm__Re_entry__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Re_entry__c</fullName>
    <label>Re-entry</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>