force-app/main/default/objects/copadovsm__Value_Stream_Map_Event__c/fields/copadovsm__Stage__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stage</label>
    <referenceTo>copadovsm__Stage__c</referenceTo>
    <relationshipLabel>Value Stream Map Events</relationshipLabel>
    <relationshipName>Value_Stream_Map_Events</relationshipName>
    <type>Lookup</type>
</CustomField>