force-app/main/default/objects/copadovsm__Value_Stream_Map_Event__c/fields/copadovsm__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>