force-app/main/default/objects/copadovsm__Value_Stream_Map_Event__c/fields/copadovsm__Status__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Status__c</fullName>
    <formula>IF(  ISPICKVAL(copadovsm__Type__c, &apos;Waiting&apos;), copadovsm__Stage__r.copadovsm__Waiting_Criteria__c , copadovsm__Process_Block__r.copadovsm__Active_Criteria__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>