force-app/main/default/objects/copadovsm__Value_Stream_Map_Event__c/fields/copadovsm__Type__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>