force-app/main/default/objects/copadovsm__Value_Stream_Map_Event__c/fields/copadovsm__Work_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Work_Item_Id__c</fullName>
    <label>Work Item Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>